cluster01/resume/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: resume
  labels:
    app: resume
