cluster01/resume/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dodex.site
    secretName: app-tls
  rules:
  - host: dodex.site
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: resume-svc
            port:
              number: 80
